# avito_second_chance

./: Dockerfile  alembic.ini  pip  pyproject.toml  requirements.txt
src/: config.py  database.py  exceptions.py  logger.py  main.py
src/bids/: bids.json  bids_2.json  dao.py  dependencies.py  enums.py  models.py  router.py  schemas.py
src/dao/: base.py
src/migrations/: env.py
src/migrations/versions/: 2024-09-10_added_all_given_tables.py  2024-09-10_added_tender.py  2024-09-10_initial_migration.py  2024-09-12_added_new_table_tenderoldversion.py  2024-09-12_added_new_tables_bid_and_bidoldversion.py  2024-09-13_added_new_table_bidapproval.py  2024-09-13_bidfeedback_added.py
src/ping/: router.py
src/tenders/: dao.py  dependencies.py  enums.py  models.py  router.py  schemas.py  service.py
src/test/: conftest.py  test_ping.py
src/tests/: conftest.py  mock_employee.json  mock_organization.json  mock_organization_responsible.json  mock_tender.json  mock_tender_old_version.json  test_ping.py
src/tests/integration_tests/test_tenders/: test_tenders_api.py
